03_03_2025 HEADER DEL DETALLE AGRUPADO EN LA MISMA PANTALLA QUE EL LISTADO DE PRODUCTOS

--- a/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
@@ -6,6 +6,67 @@
   aria-labelledby="hs-detalles-inventario"
 >
   <div class="offcanvas-header header-detalle">
+  <!-- Header con información clave -->
+<div class="  flex flex-col sm:flex-row justify-between items-center gap-4">
+
+  <!-- Inventario descripción y estado -->
+  <div class="bg-white px-6 py-3 rounded-lg flex items-center gap-3">
+    <div class="w-8 h-8 flex items-center justify-center bg-gray-100 rounded-full">
+      <mat-icon class="text-[var(--color-principal-2)] text-base text-center">inventory</mat-icon>
+    </div>
+    <div>
+      <div class="flex items-center gap-2">
+        <span class="text-xs uppercase text-gray-500 font-semibold">Inventario</span>
+        <span
+          class="py-1 px-1.5 inline-flex content-center items-center justify-center gap-x-1 text-xs font-medium rounded-full shadow-md"
+          [ngClass]="{
+            'bg-[var(--color-principal-3)] text-white': citaSeleccionada.estado == '1',
+            'bg-[var(--color-principal-6)] text-white': citaSeleccionada.estado == '0'
+          }"
+        >
+          {{ citaSeleccionada.estado == "1" ? "Activo" : "Inactivo" }}
+        </span>
+      </div>
+      <span class="text-sm font-medium text-gray-800 block">{{ citaSeleccionada.descripcion }}</span>
+    </div>
+
+  </div>
+
+  <!-- Usuario Creador -->
+  <div class="bg-white px-6 py-3 rounded-lg flex items-center gap-3">
+    <div class="w-8 h-8 flex items-center justify-center bg-gray-100 rounded-full">
+      <mat-icon class="text-[var(--color-principal-2)] text-base text-center">person</mat-icon>
+    </div>
+    <div>
+      <span class="text-xs uppercase text-gray-500 font-semibold">Usuario Creador</span>
+      <span class="text-sm font-medium text-gray-800 block">{{ citaSeleccionada.usuariocreacion }}</span>
+    </div>
+  </div>
+
+  <!-- RUC -->
+  <div class="bg-white px-6 py-3 rounded-lg flex items-center gap-3">
+    <div class="w-8 h-8 flex items-center justify-center bg-gray-100 rounded-full">
+      <mat-icon class="text-[var(--color-principal-2)] text-base text-center">business</mat-icon>
+    </div>
+    <div>
+      <span class="text-xs uppercase text-gray-500 font-semibold">RUC</span>
+      <span class="text-sm font-medium text-gray-800 block">{{ citaSeleccionada.rucempresa }}</span>
+    </div>
+  </div>
+
+  <!-- Fecha Registro -->
+  <div class="bg-white px-6 py-3 rounded-lg flex items-center gap-3">
+    <div class="w-8 h-8 flex items-center justify-center bg-gray-100 rounded-full">
+      <mat-icon class="text-[var(--color-principal-2)] text-base text-center">event</mat-icon>
+    </div>
+    <div>
+      <span class="text-xs uppercase text-gray-500 font-semibold">Fecha Registro</span>
+      <span class="text-sm font-medium text-gray-800 block">{{ citaSeleccionada.fechacreacion | date : "dd/MM/yyyy" }}</span>
+    </div>
+  </div>
+
+</div>
+
     <button
       type="button"
       class="btn-close"
@@ -14,221 +75,140 @@
     ></button>
   </div>
   <div class="offcanvas-body">
-    <mat-tab-group>
+    <div class="max-w-[100rem] px-4 py-1 sm:px-6 lg:px-8 lg:py-14 mx-auto">
+      <div class="flex flex-col">
+        <div class="-m-1.5 overflow-x-auto">
+          <div class="p-1.5 min-w-full inline-block align-middle">
+            <div
+              class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden"
+            >
+              <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource">
+                  <ng-container matColumnDef="codigoproducto">
+                    <th mat-header-cell *matHeaderCellDef>Cod. Producto</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.codigoproducto }}
+                    </td>
+                  </ng-container>
 
-      <mat-tab label="Datos artículos">
-        <div class="max-w-[85rem] px-4 py-4 sm:px-6 lg:px-8 lg:py-14 mx-auto">
-          <div class="flex flex-col">
-            <div class="-m-1.5 overflow-x-auto">
-              <div class="p-1.5 min-w-full inline-block align-middle">
-                <div
-                  class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden"
-                >
-                  <div class="mat-elevation-z8">
-                    <table mat-table [dataSource]="dataSource">
-                      <ng-container matColumnDef="codigoproducto">
-                        <th mat-header-cell *matHeaderCellDef>Cod. Producto</th>
-                        <td mat-cell *matCellDef="let element">
-                          {{ element.codigoproducto }}
-                        </td>
-                      </ng-container>
+                  <ng-container matColumnDef="codigobarra">
+                    <th mat-header-cell *matHeaderCellDef>Cod. Barra</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.codigobarra }}
+                    </td>
+                  </ng-container>
 
-                      <ng-container matColumnDef="codigobarra">
-                        <th mat-header-cell *matHeaderCellDef>Cod. Barra</th>
-                        <td mat-cell *matCellDef="let element">
-                          {{ element.codigobarra }}
-                        </td>
-                      </ng-container>
+                  <ng-container matColumnDef="descripcionProducto">
+                    <th mat-header-cell *matHeaderCellDef>Descripción</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.descripcionProducto }}
+                    </td>
+                  </ng-container>
 
-                      <ng-container matColumnDef="descripcionProducto">
-                        <th mat-header-cell *matHeaderCellDef>Descripción</th>
-                        <td mat-cell *matCellDef="let element">
-                          {{ element.descripcionProducto }}
-                        </td>
-                      </ng-container>
+                  <ng-container matColumnDef="unidad">
+                    <th mat-header-cell *matHeaderCellDef>Unidad</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.unidad }}
+                    </td>
+                  </ng-container>
 
-                      <ng-container matColumnDef="unidad">
-                        <th mat-header-cell *matHeaderCellDef>Unidad</th>
-                        <td mat-cell *matCellDef="let element">
-                          {{ element.unidad }}
-                        </td>
-                      </ng-container>
+                  <ng-container matColumnDef="stockL">
+                    <th mat-header-cell *matHeaderCellDef>stock L.</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.stockL }}
+                    </td>
+                  </ng-container>
 
-                      <ng-container matColumnDef="stockL">
-                        <th mat-header-cell *matHeaderCellDef>stock L.</th>
-                        <td mat-cell *matCellDef="let element">
-                          {{ element.stockL }}
-                        </td>
-                      </ng-container>
+                  <ng-container matColumnDef="almacen">
+                    <th mat-header-cell *matHeaderCellDef>Almacen</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.almacen }}
+                    </td>
+                  </ng-container>
 
-                      <ng-container matColumnDef="almacen">
-                        <th mat-header-cell *matHeaderCellDef>Almacen</th>
-                        <td mat-cell *matCellDef="let element">
-                          {{ element.almacen }}
-                        </td>
-                      </ng-container>
+                  <ng-container matColumnDef="sucursal">
+                    <th mat-header-cell *matHeaderCellDef>Sucursal</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.sucursal }}
+                    </td>
+                  </ng-container>
 
-                      <ng-container matColumnDef="sucursal">
-                        <th mat-header-cell *matHeaderCellDef>Sucursal</th>
-                        <td mat-cell *matCellDef="let element">
-                          {{ element.sucursal }}
-                        </td>
-                      </ng-container>
+                  <ng-container matColumnDef="zona">
+                    <th mat-header-cell *matHeaderCellDef>Zona</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.zona }}
+                    </td>
+                  </ng-container>
 
-                      <ng-container matColumnDef="zona">
-                        <th mat-header-cell *matHeaderCellDef>Zona</th>
-                        <td mat-cell *matCellDef="let element">
-                          {{ element.zona }}
-                        </td>
-                      </ng-container>
+                  <ng-container matColumnDef="pasillo">
+                    <th mat-header-cell *matHeaderCellDef>Pasillos</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.pasillo }}
+                    </td>
+                  </ng-container>
 
-                      <ng-container matColumnDef="pasillo">
-                        <th mat-header-cell *matHeaderCellDef>Pasillos</th>
-                        <td mat-cell *matCellDef="let element">
-                          {{ element.pasillo }}
-                        </td>
-                      </ng-container>
+                  <ng-container matColumnDef="rack">
+                    <th mat-header-cell *matHeaderCellDef>Rack</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.rack }}
+                    </td>
+                  </ng-container>
 
-                      <ng-container matColumnDef="rack">
-                        <th mat-header-cell *matHeaderCellDef>Rack</th>
-                        <td mat-cell *matCellDef="let element">
-                          {{ element.rack }}
-                        </td>
-                      </ng-container>
+                  <ng-container matColumnDef="ubicacion">
+                    <th mat-header-cell *matHeaderCellDef>Ubicación</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.ubicacion }}
+                    </td>
+                  </ng-container>
 
-                      <ng-container matColumnDef="ubicacion">
-                        <th mat-header-cell *matHeaderCellDef>Ubicación</th>
-                        <td mat-cell *matCellDef="let element">
-                          {{ element.ubicacion }}
-                        </td>
-                      </ng-container>
+                  <ng-container matColumnDef="esagrupado">
+                    <th mat-header-cell *matHeaderCellDef>Es Agrupado</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.esagrupado }}
+                    </td>
+                  </ng-container>
 
-                      <ng-container matColumnDef="esagrupado">
-                        <th mat-header-cell *matHeaderCellDef>Es Agrupado</th>
-                        <td mat-cell *matCellDef="let element">
-                          {{ element.esagrupado }}
-                        </td>
-                      </ng-container>
+                  <ng-container matColumnDef="codgrupo">
+                    <th mat-header-cell *matHeaderCellDef>Cod. Grupo</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.codigogrupo }}
+                    </td>
+                  </ng-container>
 
-                      <ng-container matColumnDef="codgrupo">
-                        <th mat-header-cell *matHeaderCellDef>Cod. Grupo</th>
-                        <td mat-cell *matCellDef="let element">
-                          {{ element.codigogrupo }}
-                        </td>
-                      </ng-container>
-
-
-
-                      <tr
-                        mat-header-row
-                        *matHeaderRowDef="displayedColumns"
-                      ></tr>
-                      <tr
-                        mat-row
-                        *matRowDef="let row; columns: displayedColumns"
-                      ></tr>
-                    </table>
-                    <div class="input-group mb-2 flex items-center ml-4">
-                      <div class="dropdown mr-4">
-                        <select
-                          class="form-select"
-                          (change)="onItemsPerPageChange($event)"
-                          aria-label="Default select example"
-                        >
-                          <option value="" disabled selected>Ítems</option>
-                          <option value="5">5</option>
-                          <option selected value="10">10</option>
-                          <option value="15">15</option>
-                          <option value="20">20</option>
-                        </select>
-                      </div>
-                      <div class="flex items-center justify-center">
-                        <mat-paginator
-                          [pageSize]="itemsPerPage"
-                          showFirstLastButtons
-                          aria-label="Select page of periodic elements"
-                        >
-                        </mat-paginator>
-                      </div>
-                    </div>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr
+                    mat-row
+                    *matRowDef="let row; columns: displayedColumns"
+                  ></tr>
+                </table>
+                <div class="input-group mb-2 flex items-center ml-4">
+                  <div class="dropdown mr-4">
+                    <select
+                      class="form-select"
+                      (change)="onItemsPerPageChange($event)"
+                      aria-label="Default select example"
+                    >
+                      <option value="" disabled selected>Ítems</option>
+                      <option value="5">5</option>
+                      <option selected value="10">10</option>
+                      <option value="15">15</option>
+                      <option value="20">20</option>
+                    </select>
+                  </div>
+                  <div class="flex items-center justify-center">
+                    <mat-paginator
+                      [pageSize]="itemsPerPage"
+                      showFirstLastButtons
+                      aria-label="Select page of periodic elements"
+                    >
+                    </mat-paginator>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </mat-tab>
-      <mat-tab label="Datos generales">
-        <div class="py-6 grid grid-cols-1 md:grid-cols-2 shadow-lg rounded-lg overflow-hidden detalle-general">
-          <!-- Sección izquierda: Descripción y estado -->
-          <div class="fondo flex flex-col px-8 py-10 justify-center items-center gap-6
-          text-white rounded-l-lg
-          bg-gradient-to-b from-[var(--color-principal-1)] to-[var(--color-principal-3)]
-          relative overflow-hidden">
-
-          <div class="absolute inset-0 bg-cover bg-center opacity-15"
-            style="background-image: url('../../../../../../assets/images/fondo-db.jpg');">
-          </div>
-
-          <!-- Contenido en primer plano -->
-          <mat-icon class="icono-logo" >inventory</mat-icon>
-
-          <h2 class="text-3xl font-[700] text-center leading-snug z-10">
-            {{ citaSeleccionada.descripcion }}
-          </h2>
-
-          <span class="flex items-center gap-2 px-4 py-2 text-sm font-semibold rounded-full shadow-lg transition-transform transform hover:scale-105 z-10"
-            [ngClass]="{
-              'bg-[var(--color-principal-3)] text-white': citaSeleccionada.estado == '1',
-              'bg-[var(--color-principal-6)] text-white': citaSeleccionada.estado == '0'
-            }">
-            <mat-icon class="size-4">
-              {{ citaSeleccionada.estado == "1" ? "check_circle" : "error" }}
-            </mat-icon>
-            {{ citaSeleccionada.estado == "1" ? "Activo" : "Inactivo" }}
-          </span>
-        </div>
-
-
-          <!-- Sección derecha: Tarjetas de información -->
-          <div class="p-8 flex flex-col justify-center bg-white">
-            <h3 class="text-xl font-semibold text-[var(--color-principal-2)] mb-6">
-              Detalles de la Cita
-            </h3>
-
-            <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
-              <!-- Tarjeta 1: Usuario Creador -->
-              <div class="p-5 boder-target  border-[var(--color-principal-3)] rounded-lg  bg-white flex flex-col items-center text-center transition-transform transform ">
-                <mat-icon class="text-[var(--color-principal-2)] mb-2 size-6">person</mat-icon>
-                <span class="text-xs uppercase text-[var(--color-principal-5)] font-semibold">Usuario Creador</span>
-                <span class="text-sm font-medium text-[var(--color-principal-1)]">
-                  {{ citaSeleccionada.usuariocreacion }}
-                </span>
-              </div>
-
-              <!-- Tarjeta 2: RUC -->
-              <div class="p-5 boder-target rounded-lg  bg-white flex flex-col items-center text-center transition-transform transform  ">
-                <mat-icon class="text-[var(--color-principal-2)] mb-2 size-6">business</mat-icon>
-                <span class="text-xs uppercase text-[var(--color-principal-5)] font-semibold">RUC</span>
-                <span class="text-sm font-medium text-[var(--color-principal-1)]">
-                  {{ citaSeleccionada.rucempresa }}
-                </span>
-              </div>
-
-              <!-- Tarjeta 3: Fecha Registro -->
-              <div class="p-5 boder-target rounded-lg  bg-white flex flex-col items-center text-center transition-transform transform ">
-                <mat-icon class="text-[var(--color-principal-2)] mb-2 size-6">event</mat-icon>
-                <span class="text-xs uppercase text-[var(--color-principal-5)] font-semibold">Fecha Registro</span>
-                <span class="text-sm font-medium text-[var(--color-principal-1)]">
-                  {{ citaSeleccionada.fechacreacion | date : "dd/MM/yyyy" }}
-                </span>
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-      </mat-tab>
-    </mat-tab-group>
+      </div>
+    </div>
   </div>
 </div>
