03_03_2025 DASHBOARD TARGETS REORDENADOS

--- a/src/app/Ui/Modules/Dashboard/Components/header-dashboard/header-dashboard.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/header-dashboard/header-dashboard.component.html
@@ -28,6 +28,6 @@
     </div>
   </div>
   <div class="container_menuopciones">
-    <section-opciones />
+    <section-targets-datos />
   </div>
 </div>
