--- a/src/app/Ui/Modules/Dashboard/Page/dashboard-inicio/dashboard-inicio.component.html
+++ b/src/app/Ui/Modules/Dashboard/Page/dashboard-inicio/dashboard-inicio.component.html
@@ -1,6 +1,4 @@
 <app-header-dashboard />
-<!-- <section-stats />
-<dashboard-inicial /> -->
-<section-targets-datos />
-<dashboard-inicial />
+
+<section-opciones />
 <footer-general />
