--- a/src/app/Ui/Shared/Components/organisms/targets/target-opcion/target-opcion.component.html
+++ b/src/app/Ui/Shared/Components/organisms/targets/target-opcion/target-opcion.component.html
@@ -1,5 +1,5 @@
 <li>
-  <a class="item_container" [routerLink]="route">
+  <a class="item_container no-underline" [routerLink]="route">
     <picture class="container_bg_imagen">
       <img
         [src]="imagen"
