--- a/src/app/Ui/Modules/Dashboard/Components/section-opciones/section-opciones.component.css
+++ b/src/app/Ui/Modules/Dashboard/Components/section-opciones/section-opciones.component.css
@@ -1,18 +1,7 @@
-
-.container_opciones {
-  width: 100%;
-  height: auto;
-  display: grid;
-  place-content: center;
-  padding: 1rem 0;
-}
-
-
 ul {
   display: flex;
   gap: 1rem;
   justify-content: center;
   flex-wrap: wrap;
+  padding-left: 0;
 }
-
-
