--- a/src/app/Ui/Modules/Dashboard/Components/section-opciones/section-opciones.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/section-opciones/section-opciones.component.html
@@ -1,5 +1,5 @@
-<div class="container_opciones  ">
-  <ul>
+<div class="w-full h-auto grid place-content-center bg-white py-4">
+  <ul class="m-0">
     @for (item of mainMenu.accessLink; track $index) {
       <target-opcion [imagen]="item.imagen" [name]="item.name" [route]="item.route"  />
     }
