03_03_2025 OPTIMIZACION PANTALLA USUARIO LOGUEADO

--- a/src/app/Ui/Modules/Dashboard/Components/header-dashboard/header-dashboard.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/header-dashboard/header-dashboard.component.html
@@ -11,20 +11,20 @@
     <h3 class="hidden md:flex-1 lg:flex">OPCIONES <span>INVENTARIO</span></h3>
     <div class="flex gap-4">
       <button
+        (click)="IrUsuarioLogin()"
+        mat-button
+        type="button"
+        class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border-transparent disabled:opacity-50 disabled:pointer-events-none"
+      >
+        <mat-icon class="mat-18 text-white">person</mat-icon>
+      </button>
+      <button
         (click)="logout()"
         class="border-2 px-5 py-1 text-gray-100 rounded-md hover:text-[#00D1AE] hover:border-[#00D1AE]"
       >
         Salir
       </button>
-      <button
-        (click)="IrUsuarioLogin()"
-        mat-button
-        type="button"
-        class="py-2 px-3 border border-white inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border-transparent disabled:opacity-50 disabled:pointer-events-none"
-      >
-        <mat-icon class="mat-18 text-white">person</mat-icon>
-        <span class="text-white">Usuario</span>
-      </button>
+
     </div>
   </div>
   <div class="container_menuopciones">
