--- a/src/app/Ui/Modules/UsuarioLogueado/page/usuario-logueado-page/usuario-logueado-page.component.html
+++ b/src/app/Ui/Modules/UsuarioLogueado/page/usuario-logueado-page/usuario-logueado-page.component.html
@@ -19,84 +19,20 @@
     </div>
 
     <!-- Edit Button -->
-    <div class="text-right pr-6 pb-4">
+    <!-- <div class="text-right pr-6 pb-4">
       <button
         class="bg-gray-200 hover:bg-gray-300 text-gray-700 px-4 py-2 rounded-lg transition-colors shadow-sm"
       >
         Edit
       </button>
-    </div>
+    </div> -->
   </div>
   <section
     class="flex flex-wrap pb-4 md:justify-start md:flex-nowrap z-[48] w-full text-sm lg:px-[40px]"
   >
     <div
-      class="w-full mx-auto mt-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6"
+      class="w-full mx-auto mt-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6"
     >
-      <!-- Tarjeta estilo Instagram -->
-      <div class="bg-white rounded-2xl overflow-hidden border border-gray-200">
-        <div class="p-4 flex items-center gap-3">
-          <img
-            src="../../../../../../assets/images/fondo-db.jpg"
-            class="w-10 h-10 rounded-full object-cover"
-            alt="User Avatar"
-          />
-          <span class="font-semibold text-gray-800">Inventario</span>
-        </div>
-
-        <div
-          class="relative h-max bg-blue-600 grid place-content-center border overflow-hidden"
-        >
-          <img
-            class="w-full h-max opacity-10 absolute inset-0"
-            src="../../../../../../assets/images/fondo-db.jpg"
-            alt="Card Image"
-          />
-          <div class="relative py-5 px-4 flex items-center gap-3">
-            <div>
-              <h3 class="text-lg font-bold text-white drop-shadow-md">
-                Excel Cargados
-              </h3>
-              <p class="mt-1 text-white text-2xl font-semibold drop-shadow-md">
-                25
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Tarjeta estilo Instagram -->
-      <div class="bg-white rounded-2xl overflow-hidden border border-gray-200">
-        <div class="p-4 flex items-center gap-3">
-          <img
-            src="../../../../../../assets/images/fondo-db.jpg"
-            class="w-10 h-10 rounded-full object-cover"
-            alt="User Avatar"
-          />
-          <span class="font-semibold text-gray-800">Usuarios</span>
-        </div>
-
-        <div
-          class="relative h-MAX bg-gray-600 grid place-content-center border overflow-hidden"
-        >
-          <img
-            class="w-full h-auto opacity-10 absolute inset-0"
-            src="../../../../../../assets/images/fondo-db.jpg"
-            alt="Card Image"
-          />
-          <div class="relative py-5 px-4 flex items-center gap-3">
-            <div>
-              <h3 class="text-lg font-bold text-white drop-shadow-md">
-                Usuarios registrados
-              </h3>
-              <p class="mt-1 text-white text-2xl font-semibold drop-shadow-md">
-                4
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-
 
 
       <!-- Tarjeta estilo Instagram -->
