--- a/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
@@ -24,12 +24,12 @@
             class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden"
           >
             <div class="mat-elevation-z8 h-auto">
-              <table mat-table [dataSource]="dataSource">
+              <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
                                <!-- =================================================================================== -->
                 <!-- Apartado fecha registro -->
                 <!-- =================================================================================== -->
-                <ng-container matColumnDef="fecharegistro">
-                  <th mat-header-cell *matHeaderCellDef class="mat-primary">
+                <ng-container matColumnDef="fechacreacion">
+                  <th mat-header-cell *matHeaderCellDef class="mat-primary" mat-sort-header>
                     F. Registro
                   </th>
                   <td class="rol" mat-cell *matCellDef="let element">
@@ -50,7 +50,7 @@
                 <!-- Apartado documento -->
                 <!-- =================================================================================== -->
                 <ng-container matColumnDef="rucempresa">
-                  <th mat-header-cell *matHeaderCellDef class="mat-primary">
+                  <th mat-header-cell *matHeaderCellDef class="mat-primary" mat-sort-header>
                     RUC
                   </th>
                   <td class="rol" mat-cell *matCellDef="let element">
@@ -67,7 +67,7 @@
                 <!-- Apartado razon social -->
                 <!-- =================================================================================== -->
                 <ng-container matColumnDef="razonsocial">
-                  <th mat-header-cell *matHeaderCellDef class="mat-primary">
+                  <th mat-header-cell *matHeaderCellDef class="mat-primary" mat-sort-header>
                     Razon Social
                   </th>
                   <td class="rol" mat-cell *matCellDef="let element">
@@ -83,8 +83,8 @@
                 <!-- =================================================================================== -->
                 <!-- Apartado estado -->
                 <!-- =================================================================================== -->
-                <ng-container matColumnDef="Estado">
-                  <th mat-header-cell *matHeaderCellDef class="mat-accent">
+                <ng-container matColumnDef="estado">
+                  <th mat-header-cell *matHeaderCellDef class="mat-accent" mat-sort-header>
                     Estado
                   </th>
                   <td mat-cell *matCellDef="let element">
