--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -24,12 +24,12 @@
             class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden"
           >
             <div class="mat-elevation-z8">
-              <table mat-table [dataSource]="dataSource">
+              <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
                 <!-- =================================================================================== -->
                 <!-- Cargo -->
                 <!-- =================================================================================== -->
                 <ng-container matColumnDef="cargo">
-                  <th mat-header-cell *matHeaderCellDef class="mat-primary">
+                  <th mat-header-cell *matHeaderCellDef class="mat-primary" mat-sort-header>
                     Cargo
                   </th>
                   <td class="rol" mat-cell *matCellDef="let element">
@@ -70,8 +70,8 @@
                 <!-- =================================================================================== -->
                 <!-- Empresa -->
                 <!-- =================================================================================== -->
-                <ng-container matColumnDef="empresa">
-                  <th mat-header-cell *matHeaderCellDef class="mat-primary">
+                <ng-container matColumnDef="rucempresa">
+                  <th mat-header-cell *matHeaderCellDef class="mat-primary" mat-sort-header>
                     Empresa
                   </th>
                   <td class="rol" mat-cell *matCellDef="let element">
@@ -122,7 +122,7 @@
                 <!-- =================================================================================== -->
                 <!-- Estado -->
                 <!-- =================================================================================== -->
-                <ng-container matColumnDef="estado">
+                <ng-container matColumnDef="estado1">
                   <th mat-header-cell *matHeaderCellDef class="mat-accent"></th>
                   <td mat-cell *matCellDef="let element">
                     <div class="px-6 py-3">
@@ -138,8 +138,8 @@
                 <!-- =================================================================================== -->
                 <!-- Estado btn-->
                 <!-- =================================================================================== -->
-                <ng-container matColumnDef="btnestado">
-                  <th mat-header-cell *matHeaderCellDef class="mat-accent">
+                <ng-container matColumnDef="estado">
+                  <th mat-header-cell *matHeaderCellDef class="mat-accent" mat-sort-header>
                     Estado
                   </th>
                   <td mat-cell *matCellDef="let element">
@@ -159,8 +159,8 @@
                 <!-- =================================================================================== -->
                 <!-- Nombres -->
                 <!-- =================================================================================== -->
-                <ng-container matColumnDef="nombres">
-                  <th mat-header-cell *matHeaderCellDef class="mat-primary">
+                <ng-container matColumnDef="nombreusuario">
+                  <th mat-header-cell *matHeaderCellDef class="mat-primary" mat-sort-header>
                     Nombres
                   </th>
                   <td class="rol" mat-cell *matCellDef="let element">
@@ -188,9 +188,9 @@
                   </td>
                 </ng-container>
 
-                <ng-container matColumnDef="apellidos">
-                  <th mat-header-cell *matHeaderCellDef class="mat-primary">
-                    Nombres
+                <ng-container matColumnDef="apellido">
+                  <th mat-header-cell *matHeaderCellDef class="mat-primary" mat-sort-header>
+                    Apellidos
                   </th>
                   <td class="rol" mat-cell *matCellDef="let element">
                     @if (!element.editandoApellido) {
