--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
@@ -203,7 +203,7 @@
                     type="submit"
                     class="btn btn-primary"
                   >
-                    Guardar
+                    Siguiente
                   </button>
                 </div>
               </div>
