--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -227,6 +227,8 @@
   [rucEmpresa]="datosInventario.rucempresa"
   [idCarga]="datosInventario.idcarga"
   [getUsuarios_All]="getUsuarios_All"
+  [UsuarioAsignado]="datosInventario.UsuarioAsignado"
+  [Inventario]="datosInventario.Descripcion"
 />
 
 <!-- =================================================================================== -->
