--- a/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
@@ -16,7 +16,7 @@
     </div>
     <div>
       <div class="flex items-center gap-2">
-        <span class="text-xs uppercase text-gray-500 font-semibold">Inventario</span>
+        <span class="text-xs uppercase text-gray-500 font-semibold">Detalle inv.</span>
         <span
           class="py-1 px-1.5 inline-flex content-center items-center justify-center gap-x-1 text-xs font-medium rounded-full shadow-md"
           [ngClass]="{
