--- a/src/app/Ui/Modules/configuration/Usuarios/components/tarjeta/tarjeta-usuario-enviar/tarjeta-usuario-enviar.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tarjeta/tarjeta-usuario-enviar/tarjeta-usuario-enviar.component.html
@@ -19,10 +19,10 @@
         <strong>Empresa:</strong> {{ usuario.rucempresa }}
       </p>
       <p class="bg-slate-100 h-10 p-2 rounded-md flex items-center gap-2">
-        <strong>Cargo:</strong> {{ usuario.idusuario }}
+        <strong>Usuario:</strong> {{ usuario.idusuario }}
       </p>
       <p class="bg-slate-100 h-10 p-2 rounded-md flex items-center gap-2">
-        <strong>Estado:</strong> {{ usuario.contrasenia }}
+        <strong>Contraseña:</strong> {{ usuario.contrasenia }}
       </p>
       <span
         class="grid place-content-center text-center text-slate-600 text-xs mt-4"
